app/assets/stylesheets/application.scss
/* ... */
.md-divider.signin {
    height: 144px;
}

#password {
    padding-right: 38px;
}

#password-min {
    font-size: 12px;
    font-style: italic;
    padding-left: 5px;
    margin: 0px;
    color: #999999;
}

p#emot-happy {
    font-size: 22px;
    color: #5da18d;
    position: relative;
    width: 110px;

    // top: -10px;
    left: 155px;
}

div.rem-me {
    padding-left: 5px;
    margin-top: 20px;
}

span.rem-me {
    font-size: 14px;
    padding-left: 5px;
}

p.password {
    margin-bottom: 10px;
}

.agree {
    font-size: 12px;
    padding-left: 15px;
    float: left;
    width: 240px;
}

.create-button {
    @extend .md-button;

    float: left;
    width: 102.88px;
}

p.header {
    margin: 0px;
}

.have-account {
    font-size: 12px;
    margin-top: 0px;
    margin-bottom: 20px;
    padding-left: 2px;
}

.input {
    position: relative;
}

#mail-icon {
    width: 30px;
    height: 30px;
    position: absolute;
    left: 4px;
    top: 6px;
}

#key-icon {
    width: 30px;
    height: 30px;
    position: absolute;
    left: 4px;
    top: 6px;
}

#mail-icon.warning-icon {
    position: absolute;
}

#key-icon.warning-icon {
    position: absolute;
}

#s-mail-icon {
    @extend #mail-icon;
}

#s-key-icon {
    @extend #key-icon;
}

.warning-icon {
    width: 30px;
    height: 30px;
    background: url("warning.svg");
    background-size: 100% 100%;
    background-position: center;
    background-repeat: no-repeat;
    position: absolute;
}

.search-warning-icon {
    @extend .warning-icon;
    position: absolute;
    left: 25px;
    top: 50%;
    margin-top: -15px;
}

// Eye (unmask password)- - - - - - - - - - - - - - - - - - - - - - - - - - - //

.password + .unmask {
    width: 40px;
    height: 50px;
    background: url("eye.svg");
    background-size: 80% 80%;
    background-repeat: no-repeat;
    position: absolute;
    left: 215px;
    border: none;
    cursor: pointer;
    vertical-align: middle;
    padding: 0px;
}

.password[type="text"] + .unmask {
    background: url("eye_hidden.svg");
    background-size: 80% 80%;
    background-repeat: no-repeat;
}

.new_user label {
    padding: 0px;
}

// Strike - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
.strike {
    display: block;
    text-align: left;
    overflow: hidden;
    white-space: nowrap;
}

.strike > span {
    position: relative;
    display: inline-block;
}

.strike > span:before,
.strike > span:after {
    content: "";
    position: absolute;
    top: 50%;
    width: 9999px;
    height: 1px;
    background: #C8C8C8;
}

.strike > span:before {
    right: 100%;
    margin-right: 10px;
}

.strike > span:after {
    left: 100%;
    margin-left: 10px;
}

// Game Info  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //

.uk-offcanvas-bar {
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none;
    padding-bottom: 20px;
}

.uk-offcanvas-bar::-webkit-scrollbar {
    width: 0 !important;
}

.info-title {
    // when no close button
    margin-bottom: 0px;
    margin-top: 0px;
    // with close button
    // margin-bottom: 0px;
    // margin-top: 15px;
}

.info-year {
    font-size: 14px;
    color: rgba(255, 255, 255, 0.7);
}

.info-by {
    font-size: 14px;
    color: rgba(255, 255, 255, 0.7);
    margin-top: 0px;
}

.info-cover {
    margin-bottom: 10px;
    box-shadow: -2px 4px 9px 1px #0000004a;
}

.info-platform {
    @extend .game-platform;

    font-style: normal;

    span {
        white-space: nowrap;
    }
}

.info-summary {
    font-size: 14px;
    text-align: justify;
}

.i-nav {
    padding-top: 20px;
    height: 35px;
}

.i-nav a {
    background: #444444f7;
    padding: 5px;
    border-radius: 3px;
    transition: position 0.15s ease-out;
}

.i-nav a:active {
    border-radius: 0px 0px 3px 3px;
    position: relative;
    top: 5px;
}

.i-nav a.uk-open {
    border-radius: 0px 0px 3px 3px;
    position: relative;
    top: 5px;
}

.i-nav button {
    background: #444444f7;
    padding: 5px;
    border-radius: 3px;
    transition: position 0.15s ease-out;
}

.i-nav button:active {
    border-radius: 0px 0px 3px 3px;
    background: #444444f7;
    position: relative;
    top: 5px;
}

.i-nav li {
    padding-left: 0px !important;
    margin-left: 8px;
    background: #656565;
    height: 30px;
    width: 30px;
    border-radius: 3px;
}

#info-links {
    margin-top: 20px;
}

.metacritic {
    border: 3px solid #656565;
    svg {
        max-width: 92%;
        fill: #a5a5a5;
    }
}

.ex-link {
    width: 30px;
    height: 30px;
}

.metacritic:hover svg {
    fill: #c9c9c9;
}

.google svg {
    max-width: unset;
    width: 24px;
}

// Flip Game Info Button- - - - - - - - - - - - - - - - - - - - - - - - - - - //

.flip {
    background: none;
    padding: 0px;
    border: none;
    cursor: pointer;
    width: 30px;
    float: right;
    transform: rotate(0deg);

    svg path {
        stroke: $light !important;
    }
}

.flip:hover svg path {
    stroke: $lighter !important;
}

.flip:focus {
    outline: none;
}

.flip-rotate {
    transform: rotate(180deg);
}

// Adding Games to Collections- - - - - - - - - - - - - - - - - - - - - - - - //
hr.nav-bottom {
    margin-top: 10px;
}

.add-form {
    border-radius: 5px;
    background-color: #444444f7;
    box-shadow: -4px 5px 9px 0px #0000004a;
    padding: 30px 15px 15px 15px;
    font-size: 14px;
    width: 230px;
    color: rgba(255, 255, 255, 0.5);
}

@media (min-width: 960px) {
    .add-form {
        width: 270px;
    }
}

.select-collection {
    margin: 0px 0px 20px 0px;
}

.add-button {
    background: none;
    border: 1px solid rgba(255, 255, 255, 0.5);
    border-radius: 5px;
    font-size: 13px;
    color: rgba(255, 255, 255, 0.5);
    padding: 2px 8px;
    cursor: pointer;
    height: 28px;
}

.add-button:hover {
    border: 1px solid rgba(255, 255, 255, 0.7);
    color: rgba(255, 255, 255, 0.7);
}

.add-button:focus {
    outline: none;
}
/* ... */

